Add/Edit banner

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,7 +21,11 @@ spring:
         smtp:
           starttls:
             enable: true
-            
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 11MB
+
 logging:
   level:
     root: info
@@ -32,3 +36,5 @@ mybatis:
     map-underscore-to-camel-case: true
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
+file:
+  local-file-root: /Users/chungchung/my/Temp/files/
